# travel-genie-ai

./: .gitignore  README.md  app.py  eval_run.py  metrics.py  package-lock.json  pyproject.toml  requirements.txt  resultados_eval.json  tailwind.config.ts  vite.config.ts
agent/: extractor.py  parser.py  travel_agent-metrics.py  travel_agent.py  travel_agent_metrics.py  travel_agent_vClaude.py  travel_agent_versionagent.py
backend/: api.py  travel_agent.py  travel_agent_elena.py
backend/tools/: food.py  hotels.py  places_of_interest.py  transport.py
data/: mocks.py
services/: flights.py  transport.py
src/: App.tsx  index.css
src/components/: ChatBubble.tsx  SuggestedPrompts.tsx  TripInsightsPanel.tsx
src/pages/: Index.tsx
src/types/: chat.ts
tools/: flights.py  hotels.py  places_of_interest.py  transport.py
