[project]
name = "travel-genie-ai"
version = "0.1.0"
description = "Travel Genie AI service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "transformers",
    "torch",
    "torchvision",
    "torchaudio",
    "python-dotenv",
    "requests",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
